[package]
name = "tokenbreeze-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "=4.5.41", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tabled = "0.20.0"
indexmap = "2.12.0"
sparkline = "0.1.1"
dotenv = "0.15.0"
